--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,8 @@ version: "3.8"
 services:
   backend:
     build:
-      context: .  # O contexto é a raiz do projeto
-      dockerfile: backend/Dockerfile
+      context:  ./backend # O contexto é a raiz do projeto
+      dockerfile: Dockerfile
     ports:
       - "5001:5000"
     networks:
@@ -12,12 +12,12 @@ services:
 
   frontend:
     build:
-      context: .  # O contexto é a raiz do projeto
-      dockerfile: frontend/Dockerfile
+      context: ./frontend # O contexto é a raiz do projeto
+      dockerfile: Dockerfile
     ports:
       - "3001:3000"
-    environment:
-      - REACT_APP_API_URL=http://localhost:5001/api/v1
+    #environment:
+     # - REACT_APP_API_URL=http://backend:5001/api/v1
     depends_on:
       - backend
     networks:
