--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,8 +16,8 @@ services:
       dockerfile: Dockerfile
     ports:
       - "3001:3000"
-    #environment:
-     # - REACT_APP_API_URL=http://backend:5001/api/v1
+    environment:
+      - REACT_APP_API_URL=http://localhost:5001/api/v1
     depends_on:
       - backend
     networks:
