Update Dockerfile and docker-compose.yml to change exposed ports and API URL

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       context:  ./backend 
       dockerfile: Dockerfile
     ports:
-      - "5001:5000"
+      - "5001:5001"
     networks:
       - minha-rede
 
@@ -15,9 +15,9 @@ services:
       context: ./frontend 
       dockerfile: Dockerfile
     ports:
-      - "3001:3000"
+      - "3000:3000"
     environment:
-      - REACT_APP_API_URL=http://localhost:5001/api/v1
+      - REACT_APP_API_URL=http://127.0.0.1:5001/api/v1
     depends_on:
       - backend
     networks:
